--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                                 <img src="/assets/img/speaker.png" class="speaker-img" />
                             </div>
                         </div>
+                        <img src="/assets/img/speaker.png" class="speaker-img responsive-speaker" />
                     </div>
                 </div>
 
@@ -138,6 +139,7 @@
                                 Nissin and others.</p>
                             <p>12-07/09</p>
                             <div class="plus-icon">+</div>
+                            <img src="/assets/img/chair.png" class="chair-img chair-responsive" />
                         </div>
                     </div>
                     <div class="left-content">
@@ -185,7 +187,7 @@
                         <div class="img-bg">
                             <img src="/assets/img/footer-bg.jpg" />
                         </div>
-                        <div class="flex align-center justify-between">
+                        <div class="flex align-center justify-between form-group">
                             <div>
                                 <h4>Newsletter</h4>
                                 <p>For exclusive new and market updates sign up for our newsletter.</p>
